fix center-align on header image

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,8 @@ img.unseen {
 }
 
 img.header {
-	margin-left: 20%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 div.scrollmagic-pin-spacer {
